Input pages & change details

--- a/credits.html
+++ b/credits.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="site.css" type="text/css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Interactive Map</title>
+    <title>Genshin Impact</title>
   </head>
 
   <body style="background-color:rgba(255, 255, 255, 0.856);">
@@ -35,18 +35,16 @@
         </div>
         <div class="split">
         <h1 style="font-size:5vw;"> A B O U T &nbsp;&nbsp; U S</h1>
-        <h3>
-          This website an interactive map similar to Google Maps. However, this map allows you to retrieve directions through multiple ways!
+        <p>
+          This website provides information on the collectibles in Genshin.
         </br>
-          You may click on the map to select the starting and ending locations or enter the name of the place for more accuracy!
+          Head over to our <a href="characters.html#topnav">characters</a> page. Enter the name and receieve all availble information on the character!
         </br>
-          This map also allows you to view the full directions before embarking on your journey!
-        </br>
-          Click on the instructions on the left panel to show the exact location!</h3>
+        Head over to our <a href="weapons.html">weapons</a> page. Enter the name and receieve all availble information on the weapon!
 
-        <p>Head over to our <a href="map.html#topnav">Interactive Map</a> now!
         </p>
-        <a href="https://www.mapbox.com/" target="_blank" class="button">Click here to view Map Box!</a>
+        </p>
+        <a href="https://en.wikipedia.org/wiki/K/DA" target="_blank" class="button">Click here to find out more!</a>
       </div>
     </section>
     </br>
