Change imgs + background + fix nav bar

--- a/credits.html
+++ b/credits.html
@@ -13,19 +13,18 @@
     <link rel="stylesheet" href="site.css" type="text/css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Genshin Impact</title>
+    <title>Interactive Map</title>
   </head>
-
+<!--  -->
   <body style="background-color:rgba(255, 255, 255, 0.856);">
+
+    <!-- Navigation bar (self-made)-->
     <a id="focus" href="#focus"></a>
     <div class="topnav">
-      <a class="active" href="index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="map.html#topnav">Interactive Map</a>
-      <a href="credits.html">Credits</a>
+      <a class="active" href="credits.html">Credits</a>
     </div>
-    <section class="header-img">
-      <img src="images/header-img.jpg" alt="Header image" style="height:10%; width:100%"/>
-    </section>
 
     <section class="container" >
       <div class="split img">
