--- a/map.html
+++ b/map.html
@@ -19,7 +19,15 @@
     <meta name="viewport" content="width=device-width" />
     <title>Interactive Map</title>
   </head>
-  <body>
+  <!-- Navigation bar (self-made)-->
+  <body style="background-color:rgba(255, 255, 255, 0.856);">
+    <a id="focus" href="#focus"></a>
+    <div class="topnav">
+      <a href="index.html">Home</a>
+      <a class="active" href="map.html#topnav">Interactive Map</a>
+      <a href="credits.html">Credits</a>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
@@ -30,6 +38,8 @@
     />
     <div id="map"></div>
     <script>
+
+    //Map base taken from: https://docs.mapbox.com/mapbox-gl-js/example/simple-map/
       mapboxgl.accessToken = 'pk.eyJ1Ijoicmlubml4ciIsImEiOiJja2pmZ2Q1dGcwcmVxMndxamY3a2dhb2NhIn0.fJyhRQC1tuFKSS48vGxy_w';
     var map = new mapboxgl.Map({
     container: 'map', // container id
@@ -37,13 +47,16 @@
     center: [-74.5, 40], // starting position [lng, lat]
     zoom: 9 // starting zoom
     });
-    
+
+    //Code for map directions taken from: https://docs.mapbox.com/mapbox-gl-js/example/mapbox-gl-directions/
     map.addControl(
     new MapboxDirections({
     accessToken: mapboxgl.accessToken
     }),
     'top-left'
     );
+
+    //Code for locating user taken from: https://docs.mapbox.com/mapbox-gl-js/example/mapbox-gl-directions/
     map.addControl(
     new mapboxgl.GeolocateControl({
     positionOptions: {
