Edit "about" info + resize map +add  alert box

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- Website description + function & accompanying image -->
         <h1 style="font-size:5vw;"> A B O U T &nbsp;&nbsp; U S</h1>
         <h2>
-          This website an interactive map similar to Google Maps. However, this map allows you to retrieve directions through multiple ways!
+          This website is an interactive map similar to Google Maps. However, this map allows you to retrieve directions through multiple ways!
         </br>
           You may click on the map to select the starting and ending locations or enter the name of the place for more accuracy!
         </br>
